--- a/src/login/styles/_Nins.scss
+++ b/src/login/styles/_Nins.scss
@@ -6,7 +6,7 @@
   justify-content: space-between;
   margin-top: 1rem;
   & button {
-    margin-top: 0;
+    margin-top: 0.75rem;
   }
 }
 
